# hr-apps-parser

./: README.md  all_stocks_5yr.csv:Zone.Identifier  dump.csv  get_banch.py  get_sorted.py  pyproject.toml  stocks-analizer.py
course_project/: select_sorted.py
results/: dump.csv
