[tool.poetry]
name = "course-project"
version = "0.1.0"
description = ""
authors = ["Ayta Dzhivanov <kurt.alive.1994@gmail.com>"]
readme = "README.md"
packages = [{include = "course_project"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.scripts]
stocks-analizer = 'stocks-analizer:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
